# dev

./: .env.example  .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  biome.json  package.json  skills-lock.json
backend/: .env.example  pyproject.toml
backend/app/: config.py
kawan/backend/: DEPLOY.md  pyproject.toml  render.yaml
kawan/backend/app/: achievements.py  auth.py  chutes.py  config.py  contracts.py  crypto.py  db.py  deps.py  email.py  fallback_judge.py  lateness.py  main.py  models.py  notify.py  personas.py  pipeline.py  prompts.py  push.py  scheduler.py  schemas.py  state.py  stubs.py  telegram.py  util.py  wiring.py  ws.py
kawan/backend/app/adapters/: file.py  github.py  screenshot.py
kawan/backend/app/llm/: client.py
kawan/backend/app/routes/: __init__.py  auth.py  commitments.py  me.py  (+4 more)
kawan/backend/scripts/: seed_demo.py  smoke_chutes.py
kawan/backend/tests/: conftest.py  test_acceptance.py  test_achievements.py  test_ai_integration.py  test_api.py  test_chutes_client.py  test_chutes_error_503.py  test_dynamic_cadence.py  test_email_auth.py  test_evidence_judge_degrades.py  test_file_adapter.py  test_github_adapter.py  test_github_link.py  test_issue30_evidence_validation.py  test_issue31_push_idempotent.py  test_issue32_deadline_and_statemachine.py  test_lateness.py  test_llm_client.py  test_messages.py  test_notify_fanout.py  test_permissions_and_lapse.py  test_personas.py  test_prompt_layers.py  test_prompts.py  test_push.py  test_push_deeplink.py  test_read_endpoints.py  test_screenshot_adapter.py  test_state.py  test_telegram.py  test_three_active_cap.py  test_v4_endpoints.py  test_voice.py  test_workspace_context.py  test_workspace_turn.py
(+268 files in other folders)
