[project]
name = "kawan-backend"
version = "0.1.0"
description = "Kawan backend — FastAPI single-process (trd.md §4)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "itsdangerous>=2.2",        # Starlette SessionMiddleware (signed cookie)
    "cryptography>=43",         # Fernet token-at-rest (TR-51)
    "pywebpush>=2.0",           # Web Push send side (TR-17)
    "python-multipart>=0.0.9",  # evidence screenshot upload
    "pypdf>=4.0",               # PDF text extraction for file evidence (4.1)
    "python-docx>=1.1",         # Word .docx text extraction for file evidence (4.1)
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
